--- a/plugins/mapper/dialogs/dlgmaproompropertiesbase.ui
+++ b/plugins/mapper/dialogs/dlgmaproompropertiesbase.ui
@@ -17,7 +17,7 @@
    <property name="spacing">
     <number>6</number>
    </property>
-   <property name="margin">
+   <property name="margin" stdset="0">
     <number>11</number>
    </property>
    <item>
@@ -33,7 +33,7 @@
        <property name="spacing">
         <number>6</number>
        </property>
-       <property name="margin">
+       <property name="margin" stdset="0">
         <number>11</number>
        </property>
        <item>
@@ -60,7 +60,7 @@
         </widget>
        </item>
        <item>
-        <widget class="QTextEdit" name="txtDescription" native="true"/>
+        <widget class="QTextEdit" name="txtDescription"/>
        </item>
       </layout>
      </widget>
@@ -72,7 +72,7 @@
        <property name="spacing">
         <number>6</number>
        </property>
-       <property name="margin">
+       <property name="margin" stdset="0">
         <number>11</number>
        </property>
        <item>
@@ -84,7 +84,7 @@
           <property name="spacing">
            <number>6</number>
           </property>
-          <property name="margin">
+          <property name="margin" stdset="0">
            <number>11</number>
           </property>
           <item>
@@ -92,7 +92,7 @@
             <property name="spacing">
              <number>6</number>
             </property>
-            <property name="margin">
+            <property name="margin" stdset="0">
              <number>0</number>
             </property>
             <item>
@@ -127,10 +127,10 @@
             <item>
              <spacer name="Spacer3_2">
               <property name="orientation">
-               <enum>Qt::Horizontal</enum>
+               <enum>Qt::Orientation::Horizontal</enum>
               </property>
               <property name="sizeType">
-               <enum>QSizePolicy::Expanding</enum>
+               <enum>QSizePolicy::Policy::Expanding</enum>
               </property>
               <property name="sizeHint" stdset="0">
                <size>
@@ -161,12 +161,12 @@
           <property name="spacing">
            <number>6</number>
           </property>
-          <property name="margin">
+          <property name="margin" stdset="0">
            <number>11</number>
           </property>
           <item>
            <layout class="QGridLayout">
-            <property name="margin">
+            <property name="margin" stdset="0">
              <number>0</number>
             </property>
             <property name="spacing">
@@ -355,16 +355,16 @@
             <property name="spacing">
              <number>6</number>
             </property>
-            <property name="margin">
+            <property name="margin" stdset="0">
              <number>0</number>
             </property>
             <item>
              <spacer name="Spacer9">
               <property name="orientation">
-               <enum>Qt::Vertical</enum>
+               <enum>Qt::Orientation::Vertical</enum>
               </property>
               <property name="sizeType">
-               <enum>QSizePolicy::Expanding</enum>
+               <enum>QSizePolicy::Policy::Expanding</enum>
               </property>
               <property name="sizeHint" stdset="0">
                <size>
@@ -399,10 +399,10 @@
           <item>
            <spacer name="Spacer10">
             <property name="orientation">
-             <enum>Qt::Horizontal</enum>
+             <enum>Qt::Orientation::Horizontal</enum>
             </property>
             <property name="sizeType">
-             <enum>QSizePolicy::Expanding</enum>
+             <enum>QSizePolicy::Policy::Expanding</enum>
             </property>
             <property name="sizeHint" stdset="0">
              <size>
@@ -418,10 +418,10 @@
        <item>
         <spacer name="Spacer11">
          <property name="orientation">
-          <enum>Qt::Vertical</enum>
+          <enum>Qt::Orientation::Vertical</enum>
          </property>
          <property name="sizeType">
-          <enum>QSizePolicy::Expanding</enum>
+          <enum>QSizePolicy::Policy::Expanding</enum>
          </property>
          <property name="sizeHint" stdset="0">
           <size>
@@ -441,7 +441,7 @@
        <property name="spacing">
         <number>6</number>
        </property>
-       <property name="margin">
+       <property name="margin" stdset="0">
         <number>11</number>
        </property>
        <item>
@@ -449,7 +449,7 @@
          <property name="spacing">
           <number>6</number>
          </property>
-         <property name="margin">
+         <property name="margin" stdset="0">
           <number>0</number>
          </property>
          <item>
@@ -491,16 +491,16 @@
          <property name="spacing">
           <number>6</number>
          </property>
-         <property name="margin">
+         <property name="margin" stdset="0">
           <number>0</number>
          </property>
          <item>
           <spacer name="Spacer4">
            <property name="orientation">
-            <enum>Qt::Vertical</enum>
+            <enum>Qt::Orientation::Vertical</enum>
            </property>
            <property name="sizeType">
-            <enum>QSizePolicy::Expanding</enum>
+            <enum>QSizePolicy::Policy::Expanding</enum>
            </property>
            <property name="sizeHint" stdset="0">
             <size>
@@ -536,7 +536,7 @@
        <property name="spacing">
         <number>6</number>
        </property>
-       <property name="margin">
+       <property name="margin" stdset="0">
         <number>11</number>
        </property>
        <item>
@@ -544,7 +544,7 @@
          <property name="spacing">
           <number>6</number>
          </property>
-         <property name="margin">
+         <property name="margin" stdset="0">
           <number>0</number>
          </property>
          <item>
@@ -574,16 +574,16 @@
          <property name="spacing">
           <number>6</number>
          </property>
-         <property name="margin">
+         <property name="margin" stdset="0">
           <number>0</number>
          </property>
          <item>
           <spacer name="Spacer7">
            <property name="orientation">
-            <enum>Qt::Vertical</enum>
+            <enum>Qt::Orientation::Vertical</enum>
            </property>
            <property name="sizeType">
-            <enum>QSizePolicy::Expanding</enum>
+            <enum>QSizePolicy::Policy::Expanding</enum>
            </property>
            <property name="sizeHint" stdset="0">
             <size>
@@ -618,16 +618,16 @@
      <property name="spacing">
       <number>6</number>
      </property>
-     <property name="margin">
+     <property name="margin" stdset="0">
       <number>0</number>
      </property>
      <item>
       <spacer name="Spacer1">
        <property name="orientation">
-        <enum>Qt::Horizontal</enum>
+        <enum>Qt::Orientation::Horizontal</enum>
        </property>
        <property name="sizeType">
-        <enum>QSizePolicy::Expanding</enum>
+        <enum>QSizePolicy::Policy::Expanding</enum>
        </property>
        <property name="sizeHint" stdset="0">
         <size>
@@ -976,4 +976,23 @@
    </hints>
   </connection>
  </connections>
+ <slots>
+  <slot>slotPathDelete()</slot>
+  <slot>slotPathProperties()</slot>
+  <slot>slotAddItem()</slot>
+  <slot>slotRemoveItem()</slot>
+  <slot>slotNW()</slot>
+  <slot>slotW()</slot>
+  <slot>slotSW()</slot>
+  <slot>slotS()</slot>
+  <slot>slotSE()</slot>
+  <slot>slotE()</slot>
+  <slot>slotNE()</slot>
+  <slot>slotN()</slot>
+  <slot>slotHide()</slot>
+  <slot>slotUseDefaultColor(bool)</slot>
+  <slot>slotNewItemSelected()</slot>
+  <slot>slotEditItemName(QString)</slot>
+  <slot>slotCustom()</slot>
+ </slots>
 </ui>
