--- a/plugins/mapper/dialogs/dlgspeedwalkprogressbase.ui
+++ b/plugins/mapper/dialogs/dlgspeedwalkprogressbase.ui
@@ -1,71 +1,82 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<ui version="4.0" stdsetdef="1">
-  <author></author>
-  <comment></comment>
-  <exportmacro></exportmacro>
-  <class>DlgSpeedwalkProgressBase</class>
-  <widget class="QWidget" name="DlgSpeedwalkProgressBase">
-    <property name="geometry">
-      <rect>
-        <x>0</x>
-        <y>0</y>
-        <width>124</width>
-        <height>15</height>
-      </rect>
-    </property>
-    <property name="minimumSize">
+<ui version="4.0">
+ <class>DlgSpeedwalkProgressBase</class>
+ <widget class="QWidget" name="DlgSpeedwalkProgressBase">
+  <property name="geometry">
+   <rect>
+    <x>0</x>
+    <y>0</y>
+    <width>131</width>
+    <height>15</height>
+   </rect>
+  </property>
+  <property name="minimumSize">
+   <size>
+    <width>0</width>
+    <height>15</height>
+   </size>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>32767</width>
+    <height>15</height>
+   </size>
+  </property>
+  <property name="windowTitle">
+   <string>Speedwalk Progress</string>
+  </property>
+  <layout class="QHBoxLayout">
+   <property name="spacing">
+    <number>6</number>
+   </property>
+   <property name="margin" stdset="0">
+    <number>0</number>
+   </property>
+   <item>
+    <widget class="QPushButton" name="cmdAbort">
+     <property name="maximumSize">
       <size>
-        <width>0</width>
-        <height>15</height>
+       <width>30</width>
+       <height>15</height>
       </size>
-    </property>
-    <property name="maximumSize">
+     </property>
+     <property name="text">
+      <string>x</string>
+     </property>
+    </widget>
+   </item>
+   <item>
+    <widget class="QProgressBar" name="ProgressBar">
+     <property name="maximumSize">
       <size>
-        <width>32767</width>
-        <height>15</height>
+       <width>32767</width>
+       <height>15</height>
       </size>
-    </property>
-    <property name="windowTitle">
-      <string>Speedwalk Progress</string>
-    </property>
-    <layout class="QHBoxLayout">
-      <property name="margin">
-        <number>0</number>
-      </property>
-      <property name="spacing">
-        <number>6</number>
-      </property>
-      <item>
-        <widget class="QPushButton" name="cmdAbort">
-          <property name="maximumSize">
-            <size>
-              <width>30</width>
-              <height>15</height>
-            </size>
-          </property>
-          <property name="text">
-            <string>x</string>
-          </property>
-        </widget>
-      </item>
-      <item>
-        <widget class="QProgressBar" name="ProgressBar">
-          <property name="maximumSize">
-            <size>
-              <width>32767</width>
-              <height>15</height>
-            </size>
-          </property>
-        </widget>
-      </item>
-    </layout>
-  </widget>
-  <connections>
-    <connection>
-      <sender>cmdAbort</sender>
-      <signal>clicked()</signal>
-      <receiver>DlgSpeedwalkProgressBase</receiver>
-      <slot>slotAbort()</slot>
-    </connection>
-  </connections>
+     </property>
+    </widget>
+   </item>
+  </layout>
+ </widget>
+ <resources/>
+ <connections>
+  <connection>
+   <sender>cmdAbort</sender>
+   <signal>clicked()</signal>
+   <receiver>DlgSpeedwalkProgressBase</receiver>
+   <slot>slotAbort()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>20</x>
+     <y>20</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>20</x>
+     <y>20</y>
+    </hint>
+   </hints>
+  </connection>
+ </connections>
+ <slots>
+  <slot>slotAbort()</slot>
+ </slots>
 </ui>
